# RPG

./: Adventurer.cpp  Adventurer.h  JSON.cpp  JSON.h  Makefile  Monster.cpp  Monster.h  Source.cpp  battle.sh  good_output.txt
.github/workflows/: googletest.yml  main.yml
tests/: Adventurer.json  CMakeLists.txt  Monster.json  Zombie.json  test.cpp
units/: adventurer.json  hulk.json  loki.json  monster.json  szomszedneni.json  thor.json  zombie.json
